# DoomDepth

./: .gitignore  CMakeLists.txt  README.md  main.c
data/: 1_monster.txt  2_monster.txt  3_monster.txt  boss.txt  intro.txt
include/: display.h  displayCharacterStats.h  fight.h  intro.h  monster.h  player.h  random.h  readFile.h  stuff.h  util.h  weapon.h
src/: readme.md
src/fight/: fight.c
src/map/: map.c
src/monster/: monster.c
src/player/: player.c
src/save/: save.c
src/spell/: spell.c
src/stuff/: armor.c  weapon.c
src/util/: display.c  displayCharacterStats.c  intro.c  random.c  readFile.c
